fix xong roi